force-app/main/default/objects/Survey_Submission__e/Survey_Submission__e.object-meta.xml
<CustomObject>
    <label>Survey Submission</label>
    <pluralLabel>Survey Submissions</pluralLabel>
</CustomObject>