force-app/main/default/objects/Survey_Submission__e/fields/Panelist_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Panelist_External_Id__c</fullName>
    <label>Panelist External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>