force-app/main/default/objects/Survey_Submission__e/fields/Survey_Score__c.field-meta.xml
<CustomField>
    <fullName>Survey_Score__c</fullName>
    <label>Survey Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>